public enum NeedleSize {
    NEEDLE_3,
    NEEDLE_3_5,
    NEEDLE_4
}
