package Unused;

public enum Level {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED
}
